--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Blue Avian</title>
+    <title>Blue Avian Collective</title>
 </head>
 <body> 
     <div id="root"></div>
